--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-native-community/checkbox": "^0.5.5",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.8.1",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.20.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-action-button": "^2.8.5",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-maps": "0.27.1",
     "react-native-maps-directions": "^1.8.0",
